--- a/fcc-test-suite-template-master/css/style.css
+++ b/fcc-test-suite-template-master/css/style.css
@@ -1,8 +1,23 @@
-@media (max-width: 28.75em) {
+/* @media (max-width: 28.75em) {
     html {
         font-size: 55%;
     }
+} */
+
+
+@media (max-width: 650px) {
+    .logo>img {
+        margin: 0 auto;
+    }
 }
+
+
+
+
+
+/* #container {
+    background: blueviolet;
+} */
 
 #navbar {
     display: flex;
@@ -14,6 +29,29 @@
     background: green;
     box-shadow: 0 2px 0 rgb(0 0 0 / 40%);
     z-index: 10;
+    margin-left: 5px;
+
+}
+
+
+ul {
+    list-style: none;
+    display: flex;
+    margin-right: 2rem;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+}
+
+#navbar li {
+    display: list-item;
+    width: 100px;
+    padding: 10px;
+    margin: 10px;
+    font-size: 25px;
+    color: Yellow !important;
 }
 
 #welcome-section {
@@ -28,9 +66,11 @@
 }
 
 #projects {
+    display: float;
+    /* justify-content: flex-end; */
     text-align: center;
     padding: 10rem 2rem;
-    background: var(--main-blue);
+    background: beige;
 }
 
 #profile-link {
@@ -42,5 +82,5 @@
     width: 100%;
     height: 80vh;
     padding: 0 2rem;
-    background: var(--main-gray);
+    background: lightpink;
 }
